# qpOASES

./: CMakeLists.txt
cmake/: FindMatlab.cmake
include/qpOASES/: LapackBlasReplacement.hpp
interfaces/: CMakeLists.txt
interfaces/matlab/: CMakeLists.txt  qpOASES_matlab_utils.hpp
interfaces/simulink/: CMakeLists.txt
src/: BLASReplacement.cpp  LAPACKReplacement.cpp
